// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Body renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  font-size: 1rem;
  color: #4E606A;
  font-weight: 300;
  white-space: pre-wrap;
}

<span
  className="c0"
  color="#4E606A"
  fontSize="16px"
>
  This is some body text.
</span>
`;

exports[`Text Heading with level 1 renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  color: #00708D;
  font-size: 2.125rem;
  line-height: 2.9375rem;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  font-weight: bold;
}

<h1
  className="c0"
>
  This is a heading
</h1>
`;

exports[`Text Heading with level 2 renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  color: #00708D;
  font-size: 1.875rem;
  line-height: 2.625rem;
  font-weight: bold;
}

<h2
  className="c0"
>
  This is a heading
</h2>
`;

exports[`Text Heading with level 3 renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  color: #00708D;
  font-size: 1.5rem;
  line-height: 2.125rem;
  font-weight: 500;
}

<h3
  className="c0"
>
  This is a heading
</h3>
`;

exports[`Text Link renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  color: #00a5b5;
}

<a
  className="c0"
>
  This is a link
</a>
`;
